# inglorious_crypto

./: .gitattributes  .gitignore  Cargo.toml  README.md  docker-compose.yaml  requirements.txt
docker/: docker-compose.yml
src/consumer/: Cargo.toml
src/consumer/src/: main.rs
src/fetcher/: Cargo.toml
src/fetcher/src/: main.rs
src/obsv/: Cargo.toml
src/obsv/src/: lib.rs
src/producer/: Cargo.toml
src/producer/src/: main.rs
