[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.33", features = ["full"] }
rdkafka = { version = "0.29", features = ["dynamic_linking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = "0.7"
futures-util = "0.3"  # Add this line





