[package]
name = "fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.33", features = ["full"] }
tokio-tungstenite = "0.20"
tokio-rustls = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
rdkafka = { version = "0.29", features = ["dynamic_linking"] }
url = "2.3"
webpki-roots = "0.22"




