[package]
name = "fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
futures-util = "0.3"
metrics = "0.24"
obsv = { path = "../obsv" }
rdkafka = { version = "0.36", features = ["cmake-build"] }  # or: ["dynamic-linking"]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.23", default-features = false, features = ["connect", "native-tls"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
