[package]
name = "producer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock"] }
futures-util = "0.3"
metrics = "0.24"
obsv = { path = "../obsv" }
rdkafka = { version = "0.36", features = ["cmake-build"] }  # or: ["dynamic-linking"]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
